remove draft notes

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[draftnote,
+\documentclass[%draftnote,
 11pt, fontset=Minion, toclevel=3, screen=false, linespread=1.414, lines=30,
 bib, biblatexstyle=numeric, mintcode, minted=cache]{mreport}
 \usepackage{pdfpages}
