--- a/cover.tex
+++ b/cover.tex
@@ -1,8 +1,8 @@
-\documentclass[11pt, fontset=Arno, colorful = false]{mbook}
+\documentclass[12pt, fontset=Arno]{mbook}
 
 \title{Bayesian Model Comparison \\ via Sequential Monte Carlo}
 \author{Yan Zhou}
-\date{November 2013}
+\date{April 2013}
 
 \begin{document}
   \maketitle
