--- a/title.tex
+++ b/title.tex
@@ -40,3 +40,21 @@ November 2013\vbox{}
 
 \endgroup
 \pagebreak
+
+\begingroup
+\LoadFontFamily{Arno}
+\linespread{1}
+\raggedright
+\parindent=0pt
+\thispagestyle{empty}
+\vbox{}
+\vskip\baselineskip
+{\Arno\itshape\fontsize{16}{20}\selectfont\color{MRed}Yan Zhou}
+\vskip8\baselineskip
+{\Arno\itshape\fontsize{24}{32}\selectfont\color{MRed}Bayesian Model Comparison}\linebreak
+{\Arno\itshape\fontsize{24}{32}\selectfont\color{MRed}via Sequential Monte Carlo}
+\vfill
+{\Arno\itshape\fontsize{16}{20}\selectfont\color{MRed}April 2014}
+\vskip\baselineskip
+\vbox{}
+\endgroup
