--- a/fig/cess_path_var.tex
+++ b/fig/cess_path_var.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t]
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/CESS_Path_Var}
-  \caption[Relations between the variance of the path sampling estimator and
+  \caption[Relationship between the variance of the path sampling estimator and
   \protect\cess]
   {Relationship between the variance of the path sampling estimator and $\cess^\star$ for the two-compartments \pet model with the simulated data set using the \smc[2] algorithm (on logarithm scale). The variances are calculated from 100 simulations for each sampler configuration.}
   \label{fig:cess path var}
