--- a/fig/cess_iter_mean.tex
+++ b/fig/cess_iter_mean.tex
@@ -1,8 +1,8 @@
 \begin{figure}[t]
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/CESS_Iter_Mean}
-  \caption[Relationship between average number of distributions and
+  \caption[Relationship between the average number of distributions and
   \protect\cess]
-  {Relationship between average number of distributions and $\cess^\star$ for the two-compartments \pet model with the simulated data set using the \smc[2] algorithm (on logarithm scale). The averages are calculated from 100 simulations for each sampler configuration.}
+  {Relationship between the average number of distributions and $\cess^\star$ for the two-compartments \pet model with the simulated data set using the \smc[2] algorithm (on logarithm scale). The averages are calculated from 100 simulations for each sampler configuration.}
   \label{fig:cess iter mean}
 \end{figure}
